refactor: Update error logging in PropertyController and AuthService for improved clarity; replace deprecated response classes and enhance property creation logic feat: Introduce HashingException for better error handling during hashing operations; refactor property entity creation methods for consistency fix: Remove unused RefreshTokenRepository class